--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
 	--fonte-principal: 'Inter';
-	--botao-azul-efeito: #02030e;
+	--botao-azul-efeito: #c95445;
 }
 
 body{
